--- a/style-loading.css
+++ b/style-loading.css
@@ -1,118 +1,72 @@
-@import "compass/css3";
-
-* {
-    box-sizing: border-box;
+:root {
+    --progress: 10%;
 }
 
-html {
-    height: 100%;
+.width-100 {
+
+    margin: 150px auto 0px auto;
 }
 
-body {
-    height: 100%;
-    background: white;
-    color: #757575;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    text-align: center;
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+
+img {
+    width: 35vw;
+    margin: auto auto;
+    height: 45vh;
 }
 
 
-.picture {
-    margin: 5% auto 0px auto;
-    width: 600px;
-    height: 400px;
-}
-
-.wrapper {
-    width: 350px;
-    margin: 4%auto;
-}
-
-.wrapper .load-bar {
-    width: 100%;
+#progressBar {
+    margin: -4% auto 0px auto;
+    width: 12%;
     height: 5px;
-    border-radius: 30px;
-    background: transparent;
+    border: 1px solid rgb(143, 106, 59);
     position: relative;
-    box-shadow:
-        0 1px 0 rgba(255, 255, 255, 0.8),
-        inset 0 2px 3px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
 
-
-.wrapper .load-bar-inner {
-    height: 99%;
-    width: 0%;
-    border-radius: inherit;
-    position: relative;
-    background: #c2d7ac;
-    background-color: rgb(120, 92, 29);
-    box-shadow:
-        inset 0 1px 0 rgba(255, 255, 255, 1),
-        0 1px 5px rgba(0, 0, 0, 0.3),
-        0 4px 5px rgba(0, 0, 0, 0.3);
-    animation: loader 10s linear infinite;
-}
-
-.wrapper #counter {
+#progressBar::before {
     position: absolute;
-    background: #eeeff3;
-    background: linear-gradient(#eeeff3, #cbcbd3);
-    padding: 5px 10px;
-    border-radius: 0.4em;
-    box-shadow:
-        inset 0 1px 0 rgba(255, 255, 255, 1),
-        0 2px 4px 1px rgba(0, 0, 0, 0.2),
-        0 1px 3px 1px rgba(0, 0, 0, 0.1);
-    left: -25px;
-    top: -50px;
-    font-size: 12px;
-    font-weight: bold;
-    width: 44px;
-    animation: counter 10s linear infinite;
+    top: 0;
+    left: 0;
+    width: var(--progress);
+    max-width: 100%;
+    height: 100%;
+    background-color: rgb(143, 106, 59);
+    content: attr(data-progress);
 }
 
-.wrapper #counter:after {
-    content: "";
-    position: absolute;
-    width: 8px;
-    height: 8px;
-    background: #cbcbd3;
-    transform: rotate(45deg);
-    left: 50%;
-    margin-left: -4px;
-    bottom: -4px;
-    box-shadow:
-        3px 3px 4px rgba(0, 0, 0, 0.2),
-        1px 1px 1px 1px rgba(0, 0, 0, 0.1);
-    border-radius: 0 0 3px 0;
+#data::before {
+    content: attr(data-progress);
 }
 
-.wrapper h1 {
-    font-size: 28px;
-    padding: 20px 0 8px 0;
+.data {
+    margin: 10% 0px 0px 45%;
+    color: lightgray;
 }
 
-.wrapper p {
-    font-size: 13px;
-}
-
-@keyframes loader {
-    from {
-        width: 0%;
+@media (max-width:1100px) {
+    img {
+        margin: auto auto;
+        width: 500px;
+        height: 300px;
     }
 
-    to {
+    #progressBar {
+        margin: -40px auto 0px auto;
+        width: 200px;
+    }
+
+}
+
+@media (max-width:500px) {
+    img {
         width: 100%;
-    }
-}
-
-@keyframes counter {
-    from {
-        left: -25px;
-    }
-
-    to {
-        left: 323px;
     }
 }
